# HFG

./: .gitignore  Hackaton.py  Hackaton2.py  README.md  package-lock.json  package.json  pyproject.toml  statistieken_buurt.geojson  statistieken_buurt_prive_vs_publiek.geojson  statistieken_wijk.geojson  statistieken_wijk_prive_vs_publiek.geojson
app/: layout.tsx  page.tsx
app/data/: getCoordinates.ts  mockGeoJsonData.ts  options_data.ts
components/: BiodiversityActions.tsx  CombinedMap.tsx  Login.tsx  Option.tsx  Options.tsx  SingleOption.tsx
components/SingleOption/: ExtendedOption.tsx  JoinForm.tsx  OptionHeader.tsx  PointsDialog.tsx
components/ui/: input.tsx
notebooks/: land_use.ipynb  neighbourhood_stats.ipynb
